[gd_scene load_steps=4 format=3 uid="uid://bc2jxqf8gj1k1"]

[ext_resource type="Script" uid="uid://bdnwwhldne8c1" path="res://UI/MainMenu.gd" id="1_h3j8k"]
[ext_resource type="FontFile" uid="uid://ddo7ybrfl5d2s" path="res://fonts/FUSION-PIXEL-12PX-MONOSPACED-ZH_HANS.OTF" id="2_font"]
[ext_resource type="Script" uid="uid://4bh6r44ikc8n" path="res://UI/RainbowTitle.gd" id="3_rainbow"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h3j8k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="RainbowTitle" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -220.0
offset_right = 210.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_rainbow")
font_size = 60

[node name="TitleLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "俄罗斯方块"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "经典模式"

[node name="LyricModeButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "歌曲模式"

[node name="OptionsButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "选项"

[node name="EquipmentButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "装备"

[node name="QuitButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "退出游戏"

[node name="Instructions" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "游戏控制: ← → 移动  ↑ 旋转  ↓ 快速下降  Enter 硬降落  ESC 暂停"
horizontal_alignment = 1
vertical_alignment = 1
